daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N7_unsorted_roster/header.cbor.hex
b20006015840ad8cca780b2c54c65013e958a923e87f5b32e0a3d38c4d433c60160c49f19f197834848bc4f6943f66dba6f80cc233c192188d631c7a65e6fd99ad1776dafcc202010301040105020600071838080109781a6461796c696768742d76362d666978747572652d706f6c6963790a58407055a61e437f4c963c548bc8cd86d6ca6ffb81c46b631d1312c84178a6f5d421bc7eb99e10afca85ba2679c901eff5c831bdffe9df049f5a464d286534c47ad80b58405bc319dc324b4c1f6d4fe6c5e2460fba56593397d587622cb38f6892e6a8feccd6f694032c0f08dfcf5942359ff9e44349256eef3a313b782c7c26db99ac4b440cf60d584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db7120e584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db7120f584040272137b770ae6fd2b2882a144dff2de6c5db04c42980a8217235cf1003a54405f6a7d3544d95a503d3739d289d93bbc2fcfb4bb8325373e07f06a119daf8d510001101
